force-app/zurich-base/main/default/objects/Receipt__c/fields/AccountingDate__c.field-meta.xml
<CustomField>
    <fullName>AccountingDate__c</fullName>
    <label>AccountingDate</label>
    <type>Date</type>
</CustomField>