force-app/zurich-base/main/default/objects/Receipt__c/fields/CollectionMethod__c.field-meta.xml
<CustomField>
    <fullName>CollectionMethod__c</fullName>
    <label>CollectionMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>