force-app/zurich-base/main/default/objects/Receipt__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>ExpirationDate</label>
    <type>Date</type>
</CustomField>