force-app/zurich-base/main/default/objects/Receipt__c/fields/FiliationCode__c.field-meta.xml
<CustomField>
    <fullName>FiliationCode__c</fullName>
    <label>FiliationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>