force-app/zurich-base/main/default/objects/Receipt__c/fields/FractionNumber__c.field-meta.xml
<CustomField>
    <fullName>FractionNumber__c</fullName>
    <label>FractionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>