force-app/zurich-base/main/default/objects/Receipt__c/fields/IntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryCode__c</fullName>
    <label>IntermediaryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>