force-app/zurich-base/main/default/objects/Receipt__c/fields/IssuingLevel_Indicator__c.field-meta.xml
<CustomField>
    <fullName>IssuingLevel_Indicator__c</fullName>
    <label>IssuingLevel Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>