force-app/zurich-base/main/default/objects/Receipt__c/fields/IssuingLevelIndicator__c.field-meta.xml
<CustomField>
    <fullName>IssuingLevelIndicator__c</fullName>
    <label>IssuingLevelIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>