force-app/zurich-base/main/default/objects/Receipt__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>