force-app/zurich-base/main/default/objects/Receipt__c/fields/PayerFiliationCode__c.field-meta.xml
<CustomField>
    <fullName>PayerFiliationCode__c</fullName>
    <label>PayerFiliationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>