force-app/zurich-base/main/default/objects/Receipt__c/fields/PayIndicator__c.field-meta.xml
<CustomField>
    <fullName>PayIndicator__c</fullName>
    <label>PayIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>