force-app/zurich-base/main/default/objects/Receipt__c/fields/PaymentOption__c.field-meta.xml
<CustomField>
    <fullName>PaymentOption__c</fullName>
    <label>PaymentOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>