force-app/zurich-base/main/default/objects/Receipt__c/fields/PolicyHolderFiliationCode__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolderFiliationCode__c</fullName>
    <label>PolicyHolderFiliationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>