force-app/zurich-base/main/default/objects/Receipt__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <label>PolicyNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>