force-app/zurich-base/main/default/objects/Receipt__c/fields/PolicyVersion__c.field-meta.xml
<CustomField>
    <fullName>PolicyVersion__c</fullName>
    <label>PolicyVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>