force-app/zurich-base/main/default/objects/Receipt__c/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <label>PreviousStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>