force-app/zurich-base/main/default/objects/Receipt__c/fields/PreviousStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatusDescription__c</fullName>
    <label>PreviousStatusDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>