force-app/zurich-base/main/default/objects/Receipt__c/fields/PreviousSubStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousSubStatus__c</fullName>
    <label>PreviousSubStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>