force-app/zurich-base/main/default/objects/Receipt__c/fields/PreviousSubStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>PreviousSubStatusDescription__c</fullName>
    <label>PreviousSubStatusDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>