force-app/zurich-base/main/default/objects/Receipt__c/fields/RebajeDate__c.field-meta.xml
<CustomField>
    <fullName>RebajeDate__c</fullName>
    <label>RebajeDate</label>
    <type>Date</type>
</CustomField>