force-app/zurich-base/main/default/objects/Receipt__c/fields/RefundManagamentIndicator__c.field-meta.xml
<CustomField>
    <fullName>RefundManagamentIndicator__c</fullName>
    <label>RefundManagamentIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>