force-app/zurich-base/main/default/objects/Receipt__c/fields/ReturnIndicator__c.field-meta.xml
<CustomField>
    <fullName>ReturnIndicator__c</fullName>
    <label>ReturnIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>