force-app/zurich-base/main/default/objects/Receipt__c/fields/StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>StatusDescription__c</fullName>
    <label>StatusDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>