force-app/zurich-base/main/default/objects/Receipt__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>SubStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>