force-app/zurich-base/main/default/objects/Receipt__c/fields/SubStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>SubStatusDescription__c</fullName>
    <label>SubStatusDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>