force-app/zurich-base/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number__c</columns>
    <columns>PolicyNumber__c</columns>
    <columns>PolicyVersion__c</columns>
    <columns>FiliationCode__c</columns>
    <columns>Company__c</columns>
    <columns>PayIndicator__c</columns>
    <columns>PayerFiliationCode__c</columns>
    <columns>PolicyHolderFiliationCode__c</columns>
    <columns>CollectionMethod__c</columns>
    <columns>IntermediaryCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>